--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/express": "^4.17.13",
       "better-sqlite3": "^7.4.3",
+      "express": "^4.17.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.35"
    },
