--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
    },
    "dependencies": {
       "@types/express": "^4.17.13",
+      "apollo-server-express": "^3.1.1",
       "better-sqlite3": "^7.4.3",
       "express": "^4.17.1",
+      "graphql": "^15.5.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.35"
    },
