--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "express": "^4.17.1",
       "graphql": "^15.5.1",
       "reflect-metadata": "^0.1.10",
+      "type-graphql": "^1.1.1",
       "typeorm": "0.2.35"
    },
    "scripts": {
