--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "devDependencies": {
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "typescript": "^4.3.5"
    },
    "dependencies": {
       "@types/express": "^4.17.13",
