--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "graphql": "^15.5.1",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.1.1",
+      "typedi": "^0.10.0",
       "typeorm": "0.2.35"
    },
    "scripts": {
