:package: added typeorm-typedi-extensions

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.1.1",
       "typedi": "^0.10.0",
-      "typeorm": "0.2.35"
+      "typeorm": "0.2.35",
+      "typeorm-typedi-extensions": "^0.4.1"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
