--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "@types/express": "^4.17.13",
       "apollo-server-express": "^3.1.1",
       "better-sqlite3": "^7.4.3",
+      "class-validator": "^0.13.1",
       "express": "^4.17.1",
       "graphql": "^15.5.1",
       "reflect-metadata": "^0.1.10",
