--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "typescript": "^4.3.5"
@@ -10,6 +11,7 @@
    "dependencies": {
       "@types/express": "^4.17.13",
       "apollo-server-express": "^3.1.1",
+      "bcrypt": "^5.0.1",
       "better-sqlite3": "^7.4.3",
       "class-validator": "^0.13.1",
       "express": "^4.17.1",
