--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/bcrypt": "^5.0.0",
+      "@types/jsonwebtoken": "^8.5.4",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "typescript": "^4.3.5"
@@ -17,6 +18,7 @@
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "graphql": "^15.5.1",
+      "jsonwebtoken": "^8.5.1",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.1.1",
       "typedi": "^0.10.0",
